Add MySQL support with Docker and auto-migration scripts

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,29 @@
-# Database
-DATABASE_URL="file:./dev.db"
+# ==========================================
+# Lumina Agency - Environment Variables
+# ==========================================
 
-# NextAuth
-NEXTAUTH_SECRET="your-secret-key-here"
+# Database Configuration
+# For SQLite (local development):
+# DATABASE_URL="file:./dev.db"
+# For MySQL (production):
+DATABASE_URL="mysql://lumina_user:lumina_pass_123@localhost:3306/lumina_db"
+
+# MySQL Docker Settings
+MYSQL_ROOT_PASSWORD=rootpassword123
+MYSQL_DATABASE=lumina_db
+MYSQL_USER=lumina_user
+MYSQL_PASSWORD=lumina_pass_123
+
+# NextAuth Configuration
 NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-super-secret-key-change-in-production-32chars"
+
+# Admin Setup (change these!)
+ADMIN_EMAIL="admin@lumina.agency"
+ADMIN_PASSWORD="admin123456"
+
+# Email Service (Resend) - Optional
+RESEND_API_KEY="re_your_api_key_here"
 
 # Firebase Analytics - Get these from Firebase Console
 # Go to: Firebase Console > Project Settings > General > Your apps > Firebase SDK snippet
