--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,62 @@
 version: '3.8'
 
 services:
+  # MySQL Database
+  db:
+    image: mysql:8.0
+    container_name: lumina-mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword123}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-lumina_db}
+      MYSQL_USER: ${MYSQL_USER:-lumina_user}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-lumina_pass_123}
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./docker/mysql/init:/docker-entrypoint-initdb.d
+    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD:-rootpassword123}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    networks:
+      - lumina-network
+
+  # Next.js Application
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: lumina-app
+    restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=file:/app/prisma/prod.db
-      - NEXTAUTH_URL=http://localhost:3000
-      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET:-your-super-secret-key-change-in-production}
-    volumes:
-      - sqlite-data:/app/prisma
-    restart: unless-stopped
+      - DATABASE_URL=mysql://${MYSQL_USER:-lumina_user}:${MYSQL_PASSWORD:-lumina_pass_123}@db:3306/${MYSQL_DATABASE:-lumina_db}
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000}
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET:-your-super-secret-key-change-in-production-32chars}
+      - ADMIN_EMAIL=${ADMIN_EMAIL:-admin@lumina.agency}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin123456}
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - lumina-network
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:3000/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
 
 volumes:
-  sqlite-data:
+  mysql_data:
+
+networks:
+  lumina-network:
+    driver: bridge
